Fixed some spacing with the week

--- a/css/kart.css
+++ b/css/kart.css
@@ -238,7 +238,6 @@
     top: 970px;
     font-size: 48px;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
 }
 
 /* Temp Images */
